--- a/src/App.css
+++ b/src/App.css
@@ -1,29 +1,63 @@
-.activeItem{
-    font-weight: bold;
-    border-bottom: 1px solid rgb(214, 80, 80);
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap");
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span,
+label,
+body {
+  font-family: "Roboto", sans-serif;
 }
 
-.navbar a:hover{
-color: rgb(117, 108, 148);
-}
-.ul li:hover{
-    color: rgb(117, 108, 148);
+.navbar a:hover {
+  color: rgb(117, 108, 148);
 }
 
+.nav-link:hover {
+  color: rgb(117, 108, 148) !important;
+}
 
+.nav-link:focus {
+  color: rgb(117, 108, 148) !important;
+  font-weight: bold;
+  border-bottom: 1px solid rgb(214, 80, 80);
+}
 
 /* home page */
-.get-started-btn{
-    border-radius: 15px;
-    border:1px solid lightblue;
-    background: white;
-    padding:4px;
+
+.home {
+    overflow-y: hidden;
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+.get-started-btn {
+  border-radius: 15px;
+  border: 2px solid lightblue;
+  background: white;
+  padding: 4px;
 }
-.get-started-btn:hover{
-    background-color:  lightblue;
+.get-started-btn:hover {
+  background-color: lightblue;
 }
 
-.webname{
-    color:rgb(101, 202, 202)
+.webname {
+  color: rgb(101, 202, 202);
+}
+.contactbg {
+  background: rgb(101, 202, 202);
+}
+
+
+.pcard:hover{
+    transform: scale(1.1);
+    transition: .3s;
 }
